SigmaCodebackup3rdSep/objects/Product_Request__c.object
<CustomObject>
    <fields>
        <fullName>FromLocation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>From Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Product Request</relationshipLabel>
        <relationshipName>Product_Request_From_Location</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>From_Bin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>From Bin</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Sublevel_location__c.Inventory_Location__r.Location__c</field>
                <operation>equals</operation>
                <valueField>$Source.Request_To_Location__c</valueField>
            </filterItems>
            <filterItems>
                <field>Sublevel_location__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Bin</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Sublevel_location__c</referenceTo>
        <relationshipLabel>Product Request</relationshipLabel>
        <relationshipName>Product_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>From_Location_Name__c</fullName>
        <formula>FromLocation__r.Location_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>From Location Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Need_by_Date__c</fullName>
        <label>Need by Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Transfer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Transfer</label>
        <referenceTo>Product_transfer__c</referenceTo>
        <relationshipLabel>Product Request</relationshipLabel>
        <relationshipName>Product_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_To_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request To Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Location</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Request</relationshipLabel>
        <relationshipName>Product_Request</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_From_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested From Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Location</value>
            </filterItems>
            <filterItems>
                <field>Account.Locations_Type__c</field>
                <operation>equals</operation>
                <value>Warehouse</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Request (Requested From Location)</relationshipLabel>
        <relationshipName>Product_Request1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Review in Progress</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Transfer Complete</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>To_Bin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To Bin</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Sublevel_location__c.Inventory_Location__r.Location__c</field>
                <operation>equals</operation>
                <valueField>$Source.Request_To_Location__c</valueField>
            </filterItems>
            <filterItems>
                <field>Sublevel_location__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Bin</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Sublevel_location__c</referenceTo>
        <relationshipLabel>Product Request (To Bin)</relationshipLabel>
        <relationshipName>Product_Request1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>To_Location_Name__c</fullName>
        <formula>To_Location__r.Location_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>To Location Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_Location__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>To Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Product Request (To Location)</relationshipLabel>
        <relationshipName>Product_Request_To_Location</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WorkOrderDate__c</fullName>
        <label>WorkOrderDate</label>
        <type>Date</type>
    </fields>
    <label>Product Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Need_by_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Product_Transfer__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Product_Requests_Approved</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <label>My Product Requests Approved</label>
    </listViews>
    <listViews>
        <fullName>Product_Request_Submitted_for_Approval</fullName>
        <columns>NAME</columns>
        <columns>FromLocation__c</columns>
        <columns>To_Location__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Need_by_Date__c</columns>
        <columns>WorkOrderDate__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>Product Requests Submitted for Approval</label>
    </listViews>
    <nameField>
        <displayFormat>PRE-{0000}</displayFormat>
        <label>Product Request Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Request</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>